--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,10 @@ ED217C - PINK
 FFFFFF - WHITE
 6DA34D - GREEN
 */
+.recent-searches{
+width: 98vw;
+}
+
 
 .recent-search {
     display: grid;
@@ -52,7 +56,7 @@ FFFFFF - WHITE
 }
 
 .bg1 {
-    background: url('/img/bg1.jpg');
+    background: url('https://unsplash.com/photos/deNAgNLr0b8');
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -77,7 +81,7 @@ FFFFFF - WHITE
 }
 
 .bg2 {
-    background: url('/img/bg2.jpg');
+    background: url('https://unsplash.com/photos/dVCGpKZB_E8');
     display: flex;
     flex-direction: column;
     align-items: center;
