--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ input[type="submit"]{
 }
 .result {
     border-radius: 5%;
-    background: url('/img/bg1.jpg');
+    background: #943126;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -194,7 +194,7 @@ span {
     padding: 5px;
 }
 
-@media screen and (max-width:400px){
+@media screen and (max-width:360px){
 .recent-search {
     display: inline;
     font-size: 1em; 
